go to top, içindekiler, menu, svg animation change

--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -1,5 +1,6 @@
- <!-- Modal -->
- <div class="modal fade" id="aboneol" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+<button onclick="topFunction()" id="myBtn" title="Yukarı Çık">🡹</button>
+ <!-- Modal Abone Ol -->
+ <div class="modal" id="aboneol" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content modalback">
       <div class="modal-header">
@@ -62,6 +63,27 @@
       contentSelector: '.content',
       nextSelector: '#next',
   });
+</script>
+<script>
+  //Get the button:
+mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0; // For Safari
+  document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+}
 </script>
 <script>$('#dergi a').on('click', function (e) {
   e.preventDefault()
