--- a/themes/Markut/layouts/partials/header.html
+++ b/themes/Markut/layouts/partials/header.html
@@ -5,7 +5,7 @@
       <!--  Show this only on mobile to medium screens  -->
       <nav>
         <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarToggle">
-          <span class="">menü</span>
+          <span class="border-dark">menü</span>
         </button>
       </nav>
     
