--- a/themes/Markut/layouts/kapak/single.html
+++ b/themes/Markut/layouts/kapak/single.html
@@ -19,7 +19,7 @@
 </div>
         
  <div class="container toc">
-  <div class="icindekiler">içindekiler.</div>
+  <div class="icindekiler">içindekiler</div>
   {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.sayi" "intersect" .Params.sayi ) "Permalink" "!=" .Permalink ) }}
   <div class="icsay">{{.Params.sayfa}}</div> <a href="{{ .RelPermalink }}"><h2 class="title">{{ .Title | markdownify }}</h2></a>
   <p class="yazar">{{- range $index, $element := .Params.yazar }}{{- with $.Site.GetPage "taxonomyTerm" (printf "yazar/%s" (urlize .)) }}{{ if gt $index 0 }}, {{ end }}<a href="{{ .Permalink }}">{{ .Params.title }}</a>{{ end }}{{ end }}</p>
