top icon change

--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<button onclick="topFunction()" id="myBtn" title="Yukarı Çık">🡹</button>
+<button onclick="topFunction()" id="myBtn" title="Yukarı Çık">↑</button>
  <!-- Modal Abone Ol -->
  <div class="modal" id="aboneol" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
