--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -579,10 +579,10 @@ footer a:hover {
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
-  background-color: rgb(255, 255, 255); /* Set a background color */
+  background-color: rgb(243, 243, 243); /* Set a background color */
   color: rgb(0, 0, 0); /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 5px; /* Some padding */
+  padding: 5px 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
   font-size: 28px; /* Increase font size */
 }
