--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -1,3 +1,4 @@
+/*
 @media screen and (min-width: 768px) {
   html {
     scroll-snap-type: proximity;
@@ -6,6 +7,7 @@
     scroll-padding: 60px;
   }
 }
+*/
 div {
   font-family: 'Open Sans', sans-serif;
 }
