otomatik geçiş, geçiş margin-top

--- a/themes/Markut/layouts/dergi/list.html
+++ b/themes/Markut/layouts/dergi/list.html
@@ -24,9 +24,9 @@
 {{ end }}{{ end }}</div></div>
 -->
 <div class="text-center mt-6">
-    <h2>Dergimize Eklenen En son Sayılar</h2>
-    <h3>Dergimiz her ayın 1'inde online çıkmaktadır.</h3>
-    <p>Endüstriyel tasarımı bağlamında genel tasarım disiplinleriyle ilgili içerikleri okuyucuya sunuyoruz.</p>
+    <h2>Dergimize Eklenen En Son Sayılar</h2>
+    <h3>Tasarım Dergimiz Her Ayın 1'inde Online Çıkmaktadır.</h3>
+    <p>Endüstriyel tasarımı bağlamında genel tasarım disiplinleriyle ilgili içerikleri sizlere sunuyoruz.</p>
 </div>
 <div class="container-fluid sayilar">
  {{ range ( where .Site.RegularPages "Type" "kapak" )}}
