--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -39,6 +39,7 @@
             <li class="list-inline-item"><a href="/yazar/">yazarlar</a></li>
             <li class="list-inline-item"><a href="/tags/">etiketler</a></li>
             <li class="list-inline-item"><a href="https://www.instagram.com/markutworks/" target="_blank">instagram</a></li>
+            <li class="list-inline-item"><a href="https://tr.pinterest.com/markutworks/" target="_blank">pinterest</a></li>
         </ul>
         <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a>  <a href="/dergi/">/dergi</a>  <a href="/blog/">/blog</a> | Copyright © 2020 | Markut tarafından tasarlandı.</div>
     </div></footer>
