--- a/themes/Markut/layouts/sayfa/single.html
+++ b/themes/Markut/layouts/sayfa/single.html
@@ -19,6 +19,30 @@
           {{partial "comment.html" . }}
         {{ end }}
      </div>
+     {{ $number := (float .Params.sayfa) }}
+     {{ $anothernumber := 1 }}
+     {{ $total := (add $number $anothernumber) }}
+     {{ $totalsub := (sub $number $anothernumber) }} 
+     {{ $zeooo := trim $total " " }} 
+ {{$pardate := .Params.date}}
+ {{$zero := "0"}}
+  {{ $zeo := trim $total " " }}
+  {{ $full := printf "%s%s" "0" $zeo }}
+  {{if gt 10 $total}}
+      {{ $v1 := where .Site.Pages "Params.sayfa" $full }}
+      {{ $v2 := where .Site.Pages "Params.date" $pardate }}
+      {{ $filtered := $v1 | intersect $v2 }}
+     {{ range $filtered }}
+     <a href="{{.Permalink}}" id="next"></a>
+       {{ end }}
+       {{else}}
+       {{ $z1 := where .Site.Pages "Params.sayfa" $zeo }}
+       {{ $z2 := where .Site.Pages "Params.date" $pardate }}
+       {{ $filter := $z1 | intersect $z2 }}
+      {{ range $filter }}
+      <a href="{{.Permalink}}" id="next"></a>
+        {{ end }}
+   {{end}}
      <section class="bg-light mt-5">
      {{- if .Params.tags }}
         <ul class="list-inline text-center pt-5">
