emailoctopus entegre, tumblr

--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -14,10 +14,50 @@
                   <div class="col-md-8 m-auto"><img class="img-fluid" src="/img/markut-mailde.svg" alt="Markut Mailde İllustrasyon"></div>
                   <div class="mailde-title">Dergimize Abone Olun</div>
                   <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
-                  <form name="abonelik" method="POST" data-netlify="true" action="/basarili">     
-                    <label><input type="text" name="email" class="form-control form-email" placeholder="Mail Adresiniz" required></label>
-                    <button type="submit" class="btn markutbtn">Abone Ol</button>
-                   </form>
+                  <p class="emailoctopus-success-message">
+                  </p>
+                  <p class="emailoctopus-error-message">
+                  </p>
+                  <form action="https://emailoctopus.com/lists/428629bd-1d50-11eb-a3d0-06b4694bee2a/members/embedded/1.3s/add"
+                     method="post"
+                     data-message-success="Aboneliğiniz İçin Teşekkürler!"
+                     data-message-missing-email-address="Mail adresini girmeniz gerekli."
+                     data-message-invalid-email-address="Mail adresiniz doğru gözükmüyor. Tekrar Deneyin."
+                     data-message-bot-submission-error="Bot girişi hatası. Tekrar deneyin."
+                     data-message-consent-required="Please check the checkbox to indicate your consent."
+                     data-message-invalid-parameters-error="Formda boş bölgeler veya hatalar var. Kontol edip tekrar deneyin."
+                     data-message-unknown-error="Üzgünüz, bilinmeyen hatayla karşılaştık. Lütfen tekrar deneyin."
+                     class="emailoctopus-form"
+                     data-sitekey="6LdYsmsUAAAAAPXVTt-ovRsPIJ_IVhvYBBhGvRV6"
+                  >
+                   <label for="field_0">
+                  
+                   <input id="field_0"
+                          name="field_0"
+                          type="email"
+                          placeholder="Mail Adresiniz"
+                          required="required"
+                          class="form-control form-email"
+                   > </label>
+                  <div aria-hidden="true"
+                      class="emailoctopus-form-row-hp"
+                  >
+                   <input type="hidden"
+                          name="hpc4b27b6e-eb38-11e9-be00-06b4694bee2a"
+                          tabindex="-1"
+                          autocomplete="nope"
+                   >
+                  </div>
+                  <div class="emailoctopus-form-row-subscribe">
+                   <input type="hidden"
+                          name="successRedirectUrl"
+                   >
+                   <button type="submit"
+                         class="btn markutbtn"
+                   >Abone Ol
+                   </button>
+                  </div>
+                  </form>
                    <small>ücretsizdir.</small>
           </div>
       </div>
@@ -40,11 +80,17 @@
             <li class="list-inline-item"><a href="/tags/">etiketler</a></li>
             <li class="list-inline-item"><a href="https://www.instagram.com/markutworks/" target="_blank">instagram</a></li>
             <li class="list-inline-item"><a href="https://tr.pinterest.com/markutworks/" target="_blank">pinterest</a></li>
+            <li class="list-inline-item"><a href="https://markutworks.tumblr.com/" target="_blank">tumblr</a></li>
         </ul>
         <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a>  <a href="/dergi/">/dergi</a>  <a href="/blog/">/blog</a> | Copyright © 2020 | Markut tarafından tasarlandı.</div>
     </div></footer>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="{{.Site.BaseURL}}/bootstrap/bootstrap.min.js"></script>
+    <script src="https://emailoctopus.com/bundles/emailoctopuslist/js/1.6/form-recaptcha.js">
+    </script>
+    <script src="https://emailoctopus.com/bundles/emailoctopuslist/js/1.6/form-embed.js">
+    </script>
+    
     
     {{ if not (in (.Site.BaseURL | string) "localhost") }}
       <!-- Global site tag (gtag.js) - Google Analytics -->
