--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -8,6 +8,7 @@
   }
 }
 */
+
 div {
   font-family: 'Open Sans', sans-serif;
 }
@@ -297,6 +298,10 @@ color: white;
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
   border-color: #000;
+}
+.emailoctopus-form-row-subscribe .markutbtn{
+  width: 300px;
+  background-color: #f7c421;
 }
 
 .markutcvr {
@@ -720,9 +725,10 @@ article a:hover {
   letter-spacing: 7px;
 }
 .mailde .form-email {
-  margin-top: 15px;
-  border-color: #000000;
+  border: 2px solid #000;
+  text-align: center;
   border-radius: 20px;
+  padding: 15px 0px ;
 }
 .custom-switch {
   margin-top: 7px;
@@ -951,3 +957,8 @@ article a:hover {
   height: 80vh;
   background-attachment: fixed;
 }
+.grecaptcha-badge {
+  display: none !important;
+  visibility: hidden !important;
+  }
+  
