email hatası düzeltildi, kapak mb-3

--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -64,7 +64,58 @@
     </div>
   </div>
 </div>
-<footer><hr><div class="container">  
+<footer><hr><div class="container">
+  <div class="mailde mb-5">
+    <div class="mailde-title">Dergimize Abone Olun</div>
+    <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>   
+
+<p class="emailoctopus-success-message">
+</p>
+<p class="emailoctopus-error-message">
+</p>
+<form action="https://emailoctopus.com/lists/428629bd-1d50-11eb-a3d0-06b4694bee2a/members/embedded/1.3s/add"
+   method="post"
+   data-message-success="Aboneliğiniz İçin Teşekkürler!"
+   data-message-missing-email-address="Mail adresini girmeniz gerekli."
+   data-message-invalid-email-address="Mail adresiniz doğru gözükmüyor. Tekrar Deneyin."
+   data-message-bot-submission-error="Bot girişi hatası. Tekrar deneyin."
+   data-message-consent-required="Please check the checkbox to indicate your consent."
+   data-message-invalid-parameters-error="Formda boş bölgeler veya hatalar var. Kontol edip tekrar deneyin."
+   data-message-unknown-error="Üzgünüz, bilinmeyen hatayla karşılaştık. Lütfen tekrar deneyin."
+   class="emailoctopus-form"
+   data-sitekey="6LdYsmsUAAAAAPXVTt-ovRsPIJ_IVhvYBBhGvRV6"
+>
+ <label for="field_0">
+
+ <input id="field_0"
+        name="field_0"
+        type="email"
+        placeholder="Mail Adresiniz"
+        required="required"
+        class="form-control form-email"
+ > </label>
+<div aria-hidden="true"
+    class="emailoctopus-form-row-hp"
+>
+ <input type="hidden"
+        name="hpc4b27b6e-eb38-11e9-be00-06b4694bee2a"
+        tabindex="-1"
+        autocomplete="nope"
+ >
+</div>
+<div class="emailoctopus-form-row-subscribe">
+ <input type="hidden"
+        name="successRedirectUrl"
+ >
+ <button type="submit"
+       class="btn markutbtn"
+ >Abone Ol
+ </button>
+</div>
+</form>
+
+    <small>ücretsizdir.</small>
+</div>
         <div class="footericon"><img src="/img/logo-color.svg" alt="Markut Logo"></div>
         <div class="footerlogo">MARKUT</div>
         <div class="footersur">Marmara Kreatif Ürün Tasarım Ekibi</div>
