--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -31,14 +31,13 @@
                      data-sitekey="6LdYsmsUAAAAAPXVTt-ovRsPIJ_IVhvYBBhGvRV6"
                   >
                    <label for="field_0">
-                    /label>
                    <input id="field_0"
                           name="field_0"
                           type="email"
                           placeholder="Mail Adresiniz"
                           required="required"
                           class="form-control form-email"
-                   > <
+                   > </label>
                   <div aria-hidden="true"
                       class="emailoctopus-form-row-hp"
                   >
