alises, recaptcha, 3d yazici gorsel

--- a/themes/Markut/layouts/partials/abonelik.html
+++ b/themes/Markut/layouts/partials/abonelik.html
@@ -284,11 +284,12 @@
     <div class="mailde-title">Dergimize Abone Olun</div>
     <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>   
 
+<div class="emailoctopus-form-wrapper emailoctopus-form-default null">
 <p class="emailoctopus-success-message">
 </p>
 <p class="emailoctopus-error-message">
 </p>
-<form action="https://emailoctopus.com/lists/428629bd-1d50-11eb-a3d0-06b4694bee2a/members/embedded/1.3s/add"
+<form action="https://emailoctopus.com/lists/428629bd-1d50-11eb-a3d0-06b4694bee2a/members/embedded/1.3/add"
    method="post"
    data-message-success="Aboneliğiniz İçin Teşekkürler!"
    data-message-missing-email-address="Mail adresini girmeniz gerekli."
@@ -298,7 +299,6 @@
    data-message-invalid-parameters-error="Formda boş bölgeler veya hatalar var. Kontol edip tekrar deneyin."
    data-message-unknown-error="Üzgünüz, bilinmeyen hatayla karşılaştık. Lütfen tekrar deneyin."
    class="emailoctopus-form"
-   data-sitekey="6LdYsmsUAAAAAPXVTt-ovRsPIJ_IVhvYBBhGvRV6"
 >
  <label for="field_0">
 
@@ -312,7 +312,7 @@
 <div aria-hidden="true"
     class="emailoctopus-form-row-hp"
 >
- <input type="hidden"
+ <input type="text"
         name="hpc4b27b6e-eb38-11e9-be00-06b4694bee2a"
         tabindex="-1"
         autocomplete="nope"
@@ -328,6 +328,6 @@
  </button>
 </div>
 </form>
-
+</div>
     <small>ücretsizdir.</small>
 </div>
