--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -18,7 +18,7 @@
                   </p>
                   <p class="emailoctopus-error-message">
                   </p>
-                  <form action="https://emailoctopus.com/lists/428629bd-1d50-11eb-a3d0-06b4694bee2a/members/embedded/1.3s/add"
+                  <form action="https://emailoctopus.com/lists/428629bd-1d50-11eb-a3d0-06b4694bee2a/members/embedded/1.3/add"
                      method="post"
                      data-message-success="Aboneliğiniz İçin Teşekkürler!"
                      data-message-missing-email-address="Mail adresini girmeniz gerekli."
@@ -72,7 +72,7 @@
 </p>
 <p class="emailoctopus-error-message">
 </p>
-<form action="https://emailoctopus.com/lists/428629bd-1d50-11eb-a3d0-06b4694bee2a/members/embedded/1.3s/add"
+<form action="https://emailoctopus.com/lists/428629bd-1d50-11eb-a3d0-06b4694bee2a/members/embedded/1.3/add"
    method="post"
    data-message-success="Aboneliğiniz İçin Teşekkürler!"
    data-message-missing-email-address="Mail adresini girmeniz gerekli."
@@ -139,8 +139,7 @@
     <script src="{{.Site.BaseURL}}/bootstrap/bootstrap.min.js"></script>
     <script src="https://emailoctopus.com/bundles/emailoctopuslist/js/1.6/form-embed.js">
     </script>
-      <script src="https://emailoctopus.com/bundles/emailoctopuslist/js/1.6/form-recaptcha.js">
-      </script>
+
     {{ if not (in (.Site.BaseURL | string) "localhost") }}
       <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122967892-3"></script>
