--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -121,18 +121,24 @@
         <div class="footersur">Marmara Kreatif Ürün Tasarım Ekibi</div>
         <p class="footerdesc"><strong>Markut</strong>, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online <strong>endüstriyel tasarım dergimizi</strong> bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında <strong>genel tasarım</strong> disiplinleriyle de ilişkili olarak içerikler üretmektedir. İçeriklerimizi başka platformlarda paylaşırken kaynak olarak <a href="https://www.markut.net">Markut.net</a> ibaresinin geçmesi gerekmektedir.</p>
         <ul class="list-inline footerlinks">
-            <li class="list-inline-item"><a href="/iletisim/">iletişim</a></li>
-            <li class="list-inline-item"><a href="/hakkimizda/">hakkımızda</a></li>
-            <li class="list-inline-item"><a href="/sayi-1/markut-nedir/">markut nedir?</a></li>
-            <li class="list-inline-item"><a href="/reklam-sponsorluk/">reklam ve sponsorluk</a></li>
-            <li class="list-inline-item"><a href="/bize-gonder/">bize gönder</a></li>
-            <li class="list-inline-item"><a href="/okuyucu-sozlesmesi/">okuyucu sözleşmesi</a></li>
-            <li class="list-inline-item"><a href="/yazar/">yazarlar</a></li>
-            <li class="list-inline-item"><a href="/tags/">etiketler</a></li>
-            <li class="list-inline-item"><a href="https://www.instagram.com/markutworks/" target="_blank">instagram</a></li>
-            <li class="list-inline-item"><a href="https://tr.pinterest.com/markutworks/" target="_blank">pinterest</a></li>
-            <li class="list-inline-item"><a href="https://markutworks.tumblr.com/" target="_blank">tumblr</a></li>
+            <li class="list-inline-item"><a href="/iletisim/">İletişim</a></li>| 
+            <li class="list-inline-item"><a href="/hakkimizda/">Hakkımızda</a></li>| 
+            <li class="list-inline-item"><a href="/reklam-sponsorluk/">Reklam ve Sponsorluk</a></li>| 
+            <li class="list-inline-item"><a href="/bize-gonder/">Bize Gönder</a></li>| 
+            <li class="list-inline-item"><a href="/okuyucu-sozlesmesi/">Okuyucu Sözleşmesi</a></li>| 
+            <li class="list-inline-item"><a href="/yazar/">Yazarlar</a></li>| 
+            <li class="list-inline-item"><a href="/tags/">Etiketler</a></li>| 
+            <li class="list-inline-item"><div class="custom-control custom-switch m-0 ml-0 pl-2 mdarkmode">
+              <input type="checkbox" class="custom-control-input " id="darkSwitch" />
+              <label for="darkSwitch">Karanlık Mod</label>
+            </div></li>
         </ul>
+        <ul class="list-inline footerlinks">
+          Sosyal Medya:
+        <li class="list-inline-item"><a href="https://www.instagram.com/markutworks/" target="_blank">Instagram</a></li>|
+        <li class="list-inline-item"><a href="https://tr.pinterest.com/markutworks/" target="_blank">Pinterest</a></li>|
+        <li class="list-inline-item"><a href="https://markutworks.tumblr.com/" target="_blank">Tumblr</a></li>
+      </ul>
         <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a>  <a href="/dergi/">/dergi</a>  <a href="/blog/">/blog</a> | Copyright © 2020 | Markut tarafından tasarlandı.</div>
     </div></footer>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
