--- a/themes/Markut/layouts/kapak/single.html
+++ b/themes/Markut/layouts/kapak/single.html
@@ -5,11 +5,11 @@
  <div class="container markutkapak">
             <div class="row">
               <div class="col-md-6">
-                <div class="kapaklogo">MARKUT</div>
-              <div class="kapaksur">Endüstriyel Tasarım Dergisi</div>
+                <h1 class="kapaklogo">MARKUT</h1>
+              <h2 class="kapaksur">Endüstriyel Tasarım Dergisi</h2>
               <div class="markutzaman"><time>{{ index $.Site.Data.months_data.months .Date.Month }} {{ .Date.Year }}</time> | Sayı {{ range .Params.sayi }}{{ . }}{{ end }}</div>
               <p class="text-center kapakdesc"><div class="text-center">{{.Params.aciklama | markdownify}}</div></p>
-              <div class="kapakoku">okumaya başla</div>
+              <div class="kapakoku">Okumaya Başla</div>
               <div class="kapakok">↓</div>
             </div>
               <div class="col-md-6">
@@ -39,7 +39,7 @@
   <p class="yazar">{{- range $index, $element := .Params.yazar }}{{- with $.Site.GetPage "taxonomyTerm" (printf "yazar/%s" (urlize .)) }}{{ if gt $index 0 }}, {{ end }}<a href="{{ .Permalink }}">{{ .Params.title }}</a>{{ end }}{{ end }}</p>
   <p class="desc">{{ .Params.aciklama | markdownify }}</p>
   {{ end }}
-  <div class="kapakoku">devam et</div>
+  <div class="kapakoku">Devam Et</div>
   <div class="kapakok">↓</div>
 </div>
 <div id="contentsWrapper">
