--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -359,12 +359,27 @@ footer a:hover {
   margin: 0 auto;
   margin-top: 25px;
 }
-
+.mdarkmode{
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  color: #000;
+  padding-left: 5px;
+}
+.mdarkmode:hover{
+font-weight: 700;
+text-decoration: underline;
+}
+.idarkmode{
+  width: 40px;
+  margin-left:-35px
+}
 .list-inline-item a {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 16px;
   letter-spacing: 2px;
   color: #000;
+  padding-left: 5px;
 }
 .copyright {
   text-align: center;
@@ -391,6 +406,8 @@ footer a:hover {
 .kapaklogo {
   font-size: 64px;
   font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  margin-top: 0px;
   letter-spacing: 8px;
   color: #000000;
   text-align: center;
@@ -398,10 +415,11 @@ footer a:hover {
 .kapaksur {
   color: #000;
   font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
   font-size: 19px;
   letter-spacing: 2.12px;
   text-align: center;
-  margin-top: -20px;
+  margin-top: -15px;
   margin-left: -5px;
 }
 .kapakdesc {
@@ -690,6 +708,10 @@ article a:hover {
   100%{ transform:skew(179deg,179deg) rotate(1deg);}
 }
 
+svg .stm0 {fill: rgb(0, 0, 0)13, 14, 14);}
+svg .stm0:hover {fill: rgb(95, 95, 95);}
+
+
 /* Blog başlangıç */
 .blog .title {
   margin-top: 10px;
@@ -845,7 +867,11 @@ article a:hover {
   [data-theme="dark"] .bg-mrkt {
     color: #000;
 }
-    
+[data-theme="dark"] .mdarkmode {color: #ffffff;}
+[data-theme="dark"] svg .stm0 {fill: #ffffff;}
+[data-theme="dark"] svg .stm1 {fill: #000000;}
+
+
 @media screen and (min-width: 2560px ) {
   .markutcvr{
     margin-left: 90%;
@@ -963,6 +989,7 @@ article a:hover {
     font-size: 15px;
   }
 }
+
 
 .bg-mrkt{
   background-position: center;
