darkmodeicon, svg mail, kaynaklar, iletisim

--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -11,7 +11,7 @@
       </div>
       <div class="modal-body">
           <div class="mailde">
-                  <div class="col-md-8 m-auto"><img class="img-fluid" src="/img/markut-mailde.svg" alt="Markut Mailde İllustrasyon"></div>
+                  <div class="col-md-8 m-auto"><img class="img-fluid" src="/img/markut-mailde-v2.svg" alt="Markut Mailde İllustrasyon"></div>
                   <div class="mailde-title">Dergimize Abone Olun</div>
                   <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
                   <p class="emailoctopus-success-message">
@@ -63,7 +63,7 @@
     </div>
   </div>
 </div>
-<footer><hr><div class="container">
+<footer><div class="container">
   <div class="mailde mb-5">
     <div class="mailde-title">Dergimize Abone Olun</div>
     <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>   
@@ -115,7 +115,7 @@
 
     <small>ücretsizdir.</small>
 </div>
-
+<hr>
         <div class="footericon"><img src="/img/logo-color.svg" alt="Markut Logo"></div>
         <div class="footerlogo">MARKUT</div>
         <div class="footersur">Marmara Kreatif Ürün Tasarım Ekibi</div>
