--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -18,7 +18,7 @@
               </a>
               <div class="dropdown-menu">
                 {{ range ( where .Site.RegularPages "Type" "kapak" )}}
-                <a class="dropdown-item" href="{{.Permalink}}">Sayı {{ range .Params.sayi }}{{ . }}{{ end }}</a>
+                <div class="mrkt-menu-s"><a href="{{.Permalink}}">Sayı {{ range .Params.sayi }}{{ . }}{{ end }}</a></div>
                 {{ end }}
               </div>
             </li>   
@@ -29,7 +29,7 @@
                </a>
                <div class="dropdown-menu">
                 {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.sayi" "intersect" .Params.sayi ) "Permalink" "!=" .Permalink ) }}
-             <div class="mrkt-menu"><a class="" href="{{ .RelPermalink }}">{{.Params.sayfa}} | {{ .Title | markdownify }}</a></div>                  
+             <div class="mrkt-menu"><a href="{{ .RelPermalink }}">{{.Params.sayfa}} | {{ .Title | markdownify }}</a></div>                  
                {{ end }}
                </div>
              </li>
@@ -52,15 +52,13 @@
                .stm0{fill:#020202;}
                .stm1{fill:#FFFFFF;}
               </style>
-              <g>
+              <g id="darkmodeicon">
                <path class="stm0" d="M103.1,13.1L86.2,47c0,0.1-0.2,0.1-0.3,0.1l0,0c0.1,0,0,0.1,0,0.2l-16.7,5.6c-0.1,0-0.1,0-0.1-0.1v-0.1
                  c0,0.1-0.1,0.3-0.3,0.3H57.8l-0.1,0.5c0-0.2,0.3-0.3,0.5-0.1l11,11l-5.7,4v7.3l-5.7-3.2v6.1l-4.2-2.6c-0.2-0.1-0.2-0.4,0-0.5
                  l-0.4,0.3l-1.1,5.7L51,75.5l-0.4-0.3c0.2,0.2,0.2,0.5,0,0.6l-4.1,2.5v-6.1l-5.7,3.3v-7.3l-5.7-4l11-11.1c0.1-0.1,0.3-0.1,0.4,0.1
                  l-0.1-0.4H35.3c-0.1,0-0.1-0.1-0.1-0.1v0c0,0.1-0.1,0.1-0.1,0.1l-16.6-5.5c-0.1,0-0.1-0.1,0-0.2c0,0,0,0-0.1,0c-0.1,0-0.2,0-0.2,0
                  L1.1,13.1l41.1,4.6c0.1,0,0.1,0.1,0.1,0.1l0.1-0.1l4.1-10.2L35.1,1.8h10.6c2.3,0,4.5,0.5,6.4,1.5c1.6,0.8,3.1,1.9,4.3,3.3l9.4,10.5
                  c0,0,0,0.1-0.1,0.1l0.2,0.1h0L103.1,13.1z"/>
-              </g>
-              <g>
                <path class="stm1" d="M68.9,53H35.3c-0.2,0-0.4-0.2-0.4-0.4V35.8c0-4.4,1.7-8.6,4.7-11.8l0.1-0.1c3.3-3.5,7.7-5.4,12.5-5.4
                  c3.8,0,7.4,1.2,10.4,3.5c4.4,3.3,6.9,8.3,6.9,13.8v16.8C69.4,52.8,69.1,53,68.9,53z M35.4,52.5h33.5V35.8c0-5.3-2.4-10.2-6.7-13.4
                  c-2.9-2.2-6.4-3.4-10.1-3.4c-4.6,0-8.9,1.8-12.1,5.1L40,24.3c-3,3.1-4.6,7.2-4.6,11.5V52.5z"/>
